tests/rosetta/out/Smalltalk/active-object.out
/workspace/mochi/tests/rosetta/out/Smalltalk/active-object.st:10: parse error, expected integer literal or floating-point literal or decimal literal
